--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/application-context.xml
+            /WEB-INF/context-security.xml
             /WEB-INF/dispatcher-servlet.xml 
         </param-value>
     </context-param>
@@ -28,7 +29,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
-    <!-- Spring Security
+    <!-- Spring Security-->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
@@ -36,5 +37,5 @@
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 </web-app>
